--- a/index.html
+++ b/index.html
@@ -1,169 +1,180 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Geng Hao T. | Portfolio</title>
+	<title>Geng Hao T. | Portfolio</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="css/jquery.mmenu.css" type="text/css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,300i,400,400i,500,500i,600,600i|Yantramanav:300,400,500" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="css/animate.css" rel="stylesheet">
+	<link href="css/jquery.mmenu.css" type="text/css" rel="stylesheet" />
+	<link href="css/style.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,500|Roboto:300,400,500" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
 </head>
 <body>
-    <div id="my-page">
-        <section id="top">
-            <div class="container-fluid head">
-                <nav class="navbar navbar-expand-md fixed-top navbar-light bg-faded" role="navigation">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="navbar-brand">
-                        <a href="index.html#top" class="topnav"><img src="img/logo.png"><h1>Geng Hao T.</h1></a>
-                    </div>
+	<div id="my-page">
+		<section id="top">
+			<div class="container-fluid head">
+				<nav id="nav" class="nav" role="navigation">
+					<div class="nav-brand">
+						<a class="topnav"><img src="img/logo.png"></a>
+					</div>
 
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link worknav" href="#work">Work</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="about.html">About</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-        </section>
+					<ul class="nav-menu">
+						<li><a class="worknav">Work</a></li>
+						<li><a href="about.html">About</a></li>
+					</ul>
+				</nav>
+			</div>
+		</section>
 
-        <section id="intro">
-            <div class="container-fluid intro" data-top="opacity: 1;" data-top-bottom="opacity: 0;">
-                <div class="row">
-                    <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                       <div class="description">
-                           <p><h1>Hi! I'm Geng Hao.</h1></p>
-                           <p>I'm an aspiring product designer from Singapore.</p>
-                           <p><a class="worknav" href="#work">View my work &#9662;</a></p>
-                       </div>
-                   </div>
-               </div>
-           </div>
-       </section>
-       
-       <section id="work">
-        <div class="container-fluid work">
-            <div class="row works">
-                <div class="col-12 col-md-6 mx-auto item">
-                    <a href="sayabc.html">
-                        <div class="preview">
-                            <img src="img/sayabc-hero.jpg" class="img-fluid">
-                            <div class="labels">
-                                <div class="label">UX Design</div>
-                                <div class="label">Web Design</div>
-                                <div class="label">Content Strategy</div>
-                            </div>
-                            <div class="caption">SayABC</div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-12 col-md-6 mx-auto item">
-                    <a href="snapstyle.html">
-                        <div class="preview">
-                            <img src="img/snapstyle-hero.png" class="img-fluid">
-                            <div class="labels">
-                                <div class="label">UX Design</div>
-                                <div class="label">UI Design</div>
-                            </div>
-                            <div class="caption">SnapStyle</div>
-                        </div>
-                    </a>
-                </div>
-            </div>
+		<section id="intro">
+			<div class="container-fluid intro">
+				<div class="row">
+					<div class="col-12 col-sm-12 col-md-12 col-lg-12">
+						<div class="description">
+							<p><h1>Hi, I'm Geng Hao &mdash;</h1></p>
+							<div class="tagline">
+								<p>I'm a digital product designer based in Singapore.</p>
+								<p><a class="worknav" href="#work">View my work &#9662;</a></p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
-            <div class="row works">
-                <div class="col-12 col-md-6 mx-auto item">
-                    <a href="accenture.html">
-                        <div class="preview">
-                            <img src="img/accenture-hero.jpg" class="img-fluid">
-                            <div class="labels">
-                                <div class="label">UX Design</div>
-                                <div class="label">UI Design</div>
-                            </div>
-                            <div class="caption">Accenture Challenge</div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-12 col-md-6 mx-auto item">
-                    <a href="investingnote.html">
-                        <div class="preview">
-                            <img src="img/investingnote.jpg" class="img-fluid">
-                            <div class="labels">
-                                <div class="label">UI Design</div>
-                                <div class="label">UX Design</div>
-                                <div class="label">Visual Design</div>
-                            </div>
-                            <div class="caption">InvestingNote</div>
-                        </div>
-                    </a>
-                </div>
-            </div>
+		<section id="work">
+			<div class="container-fluid work">
+				<div class="row works">
+					<div class="col-12 col-sm-6 col-md-6 col-lg-4 project-container">
+						<a>
+							<div class="project">
+								<div class="labels">
+									<div class="label">UX Design</div>
+								</div>
+								<div class="thumbnail" style="background-image: url('img/sephora-banner.png');"></div>
+								<div class="description">
+									<i class="fas fa-lock"></i>
+									<h4>Sephora</h4>
+									<p>Engaging customers of the well-loved brand</p>
+								</div>
+							</div>
+						</a>
+					</div>
 
-            <div class="row works">
-                <div class="col-12 col-md-6 mx-auto item">
-                    <a href="oneservice.html">
-                        <div class="preview">
-                            <img src="img/oneservice.jpg" class="img-fluid">
-                            <div class="labels">
-                                <div class="label">UX Design</div>
-                                <div class="label">UI Design</div>
-                            </div>
-                            <div class="caption">OneService</div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-12 col-md-6 mx-auto item">
-                    <a href="srina.html">
-                        <div class="preview">
-                            <img src="img/srina.jpg" class="img-fluid">
-                            <div class="labels">
-                                <div class="label">Branding &amp; Identity</div>
-                                <div class="label">Visual Design</div>
-                            </div>
-                            <div class="caption">Srina</div>
-                        </div>
-                    </a>
-                </div>
-            </div>
+					<div class="col-12 col-sm-6 col-md-6 col-lg-4 project-container">
+						<a href="sayabc.html">
+							<div class="project">
+								<div class="labels">
+									<div class="label">UX Design</div>
+									<div class="label">Web Design</div>
+									<div class="label">Content Strategy</div>
+								</div>
+								<div class="thumbnail" style="background-image: url('img/sayabc-banner.png');"></div>
+								<div class="description">
+									<h4>SayABC</h4>
+									<p>Enabling teachers to do more of what they love</p>
+								</div>
+							</div>
+						</a>
+					</div>
 
-            <div class="row works">
-                <div class="col-12 col-md-6 item">
-                    <a href="projectshowcase.html">
-                        <div class="preview">
-                            <img src="img/project-showcase.jpg" class="img-fluid">
-                            <div class="labels">
-                            </div>
-                            <div class="caption">Project Showcase</div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
+					<div class="col-12 col-sm-6 col-md-6 col-lg-4">
+						<a href="snapstyle.html">
+							<div class="project">
+								<div class="labels">
+									<div class="label">UX Design</div>
+									<div class="label">UI Design</div>
+								</div>
+								<div class="thumbnail" style="background-image: url('img/snapstyle-banner.png')"></div>
+								<div class="description">
+									<h4>SnapStyle</h4>
+									<p>Search, buy and explore fashion with a snap</p>
+								</div>
+							</div>
+						</a>
+					</div>
 
-    <section id="footer">
-        <div class="container-fluid footer">
-            <div class="row">
-                <div class="col-12 text-center mx-auto">
-                    <a href="http://www.linkedin.com/in/geng-hao-teo-065ab0b9/" target="_blank"><i class="fa fa-linkedin left"></i></a>
-                    <a href="http://instagram.com/genghaot" target="_blank"><i class="fa fa-instagram left"></i></a>
-                </div>
-            </div>
-            <div class="row copyright">
-                <div class="col-12 text-center mx-auto">
-                    Copyright &copy; 2018 Teo Geng Hao
-                </div>
-            </div>
-        </div>
-    </section>
+					<div class="col-12 col-sm-6 col-md-6 col-lg-4">
+						<a href="accenture.html">
+							<div class="project">
+								<div class="labels">
+									<div class="label">UX Design</div>
+									<div class="label">UI Design</div>
+								</div>
+								<div class="thumbnail" style="background-image: url('img/accenture-banner.png')"></div>
+								<div class="description">
+									<h4>Accenture Challenge</h4>
+									<p>Building greener neighbourhoods from the ground up</p>
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-12 col-sm-6 col-md-6 col-lg-4">
+						<a href="investingnote.html">
+							<div class="project">
+								<div class="labels">
+									<div class="label">UX Design</div>
+									<div class="label">UI Design</div>
+									<div class="label">Web Design</div>
+								</div>
+								<div class="thumbnail" style="background-image: url('img/investingnote-banner.png')"></div>
+								<div class="description">
+									<h4>InvestingNote</h4>
+									<p>Redesigning a social network for stock investors</p>
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-12 col-sm-6 col-md-6 col-lg-4">
+						<a href="oneservice.html">
+							<div class="project">
+								<div class="labels">
+									<div class="label">UX Design</div>
+									<div class="label">UI Design</div>
+								</div>
+								<div class="thumbnail" style="background-image: url('img/oneservice-banner.png')"></div>
+								<div class="description">
+									<h4>OneService</h4>
+									<p>Empowering citizens to improve their neighbourhoods</p>
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-12 col-sm-6 col-md-6 col-lg-4">
+						<a href="projectshowcase.html">
+							<div class="project">
+								<div class="thumbnail" style="background-image: url('img/project-showcase-banner.png')"></div>
+								<div class="description">
+									<h4>Project Showcase</h4>
+									<p>A collection of some of my other projects</p>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>
+		</section>
+
+	<section id="footer">
+		<div class="container-fluid footer">
+			<div class="row">
+				<div class="col-12 text-center mx-auto">
+					<a href="http://www.linkedin.com/in/geng-hao-teo-065ab0b9/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+					<a href="http://instagram.com/genghaot" target="_blank"><i class="fab fa-instagram"></i></a>
+				</div>
+			</div>
+			<div class="row copyright">
+				<div class="col-12 text-center mx-auto">
+					Copyright &copy; 2018 Teo Geng Hao
+				</div>
+			</div>
+		</div>
+	</section>
 </div>
 
 <!-- JavaScript placed at the end of the document so the pages load faster -->
@@ -174,13 +185,13 @@
 <script src="js/main.js"></script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109095037-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109095037-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
-      gtag('config', 'UA-109095037-1');
+	  gtag('config', 'UA-109095037-1');
   </script>
 </body>
 </html>
