--- a/about.html
+++ b/about.html
@@ -1,38 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Geng Hao T. | Project Showcase</title>
+    <title>Geng Hao T. | About</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/jquery.mmenu.css" type="text/css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,300i,400,400i,500,500i,600,600i|Yantramanav:300,400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,500|Roboto:300,400,500" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 </head>
 <body>
     <div id="my-page">
         <section id="top">
             <div class="container-fluid head">
-                <nav class="navbar navbar-expand-md fixed-top navbar-light bg-faded" role="navigation">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="navbar-brand">
-                        <a href="index.html"><img src="img/logo.png"><h1>Geng Hao T.</h1></a>
+                <nav id="nav" class="nav" role="navigation">
+                    <div class="nav-brand">
+                        <a class="topnav" href="index.html"><img src="img/logo.png"></a>
                     </div>
 
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href="index.html">Work</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="about.html">About</a>
-                            </li>
-                        </ul>
-                    </div>
+                    <ul class="nav-menu">
+                        <li><a href="index.html">Work</a></li>
+                        <li><a href="about.html">About</a></li>
+                    </ul>
                 </nav>
             </div>
         </section>
@@ -40,9 +31,8 @@
         <section id="intro">
             <div class="container-fluid about-intro">
                 <div class="row">
-                    <div class="col-12 wow fadeIn">
-                        <h1>Hello</h1>
-                        <h2>A little about me</h2>
+                    <div class="col-12 text-center header">
+                        <h1>Geng Hao Teo</h1>
                     </div>
                 </div>
             </div>
@@ -59,8 +49,8 @@
                <div class="row">
                 <div class="col-12 col-sm-10 col-md-8 col-lg-6 mx-auto text-block">
                   <p>I'm Geng Hao, a designer and student at the National University of Singapore. I enjoy crafting thoughtful and elegant digital experiences and products. I've had the privilege of working with various types of companies across a range of industries, and I'm currently looking out for opportunities in user research and interaction design.</p>
-                  <p>When I'm not working, I'm hopefully buried in a book, running like I haven't done enough cardio, or hiking somewhere in Southeast Asia. But I'm never not listening to music, with a soft spot for singer-songwriters.</p>
-                  <p>Feel free to download a copy of my <a href="resume.pdf" target="_blank">resume</a>, connect with me on <a href="http://www.linkedin.com/in/geng-hao-teo-065ab0b9/" target="_blank">LinkedIn</a>, or reach out at <strong>teogenghao@gmail.com</strong>.</p>
+                  <p>When I'm not working, I'm probably buried in a book, dabbling in film photography, running like I haven't already done enough cardio, or going on a hike somewhere. But I'm never not listening to music. I'm currently reading <em>Black Skin, White Masks</em> by Frantz Fanon, and feel free to check out some of my <a href="https://open.spotify.com/user/21iom6mfblrojwmzynzukmdpi/playlist/56Z059rWfOGefmgcBiP4ia?si=AJCoDvG5QPa1XZkN4MVZhA" target="_blank">favourite songs</a> too!</p>
+                  <p>You connect with me on <a href="http://www.linkedin.com/in/geng-hao-teo-065ab0b9/" target="_blank">LinkedIn</a>, or reach out at <strong>teogenghao@gmail.com</strong> for a copy of my resume or even just to chat. Thanks for stopping by!</p>
                 </div>
               </div>
         </section>
@@ -69,8 +59,8 @@
           <div class="container-fluid footer">
             <div class="row">
               <div class="col-12 text-center mx-auto">
-                <a href="http://www.linkedin.com/in/geng-hao-teo-065ab0b9/" target="_blank"><i class="fa fa-linkedin left"></i></a>
-                <a href="http://instagram.com/genghaot" target="_blank"><i class="fa fa-instagram left"></i></a>
+                <a href="http://www.linkedin.com/in/geng-hao-teo-065ab0b9/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="http://instagram.com/genghaot" target="_blank"><i class="fab fa-instagram"></i></a>
               </div>
             </div>
             <div class="row copyright">
