--- a/projectshowcase.html
+++ b/projectshowcase.html
@@ -1,134 +1,150 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Geng Hao T. | Project Showcase</title>
+	<title>Geng Hao T. | Project Showcase</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="css/jquery.mmenu.css" type="text/css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,300i,400,400i,500,500i,600,600i|Yantramanav:300,400,500" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="css/animate.css" rel="stylesheet">
+	<link href="css/jquery.mmenu.css" type="text/css" rel="stylesheet" />
+	<link href="css/style.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,500|Roboto:300,400,500" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 </head>
 <body>
-    <div id="my-page">
-        <section id="top">
-            <div class="container-fluid head">
-                <nav class="navbar navbar-expand-md fixed-top navbar-light bg-faded" role="navigation">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="navbar-brand">
-                        <a href="index.html"><img class="img-fluid" src="img/logo.png"><h1>Geng Hao T.</h1></a>
-                    </div>
+	<div id="my-page">
+		<section id="top">
+			<div class="container-fluid head">
+				<nav id="nav" class="nav" role="navigation">
+					<div class="nav-brand">
+						<a class="topnav" href="index.html"><img src="img/logo.png"></a>
+					</div>
 
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href="index.html">Work</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="about.html">About</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-        </section>
+					<ul class="nav-menu">
+						<li><a href="index.html" class="worknav">Work</a></li>
+						<li><a href="about.html">About</a></li>
+					</ul>
+				</nav>
+			</div>
+		</section>
 
-        <section id="intro">
-            <div class="container-fluid projectshowcase-intro">
-                <div class="row">
-                    <div class="col-12 wow fadeIn">
-                        <h1>Project Showcase</h1>
-                        <h2>Selected personal, freelance and hackathon projects</h2>
-                    </div>
-                </div>
-            </div>
-        </section>
+		<section id="intro">
+			<div class="container-fluid projectshowcase-intro">
+				<div class="row">
+					<div class="col-12 text-center header">
+						<h1>Project Showcase</h1>
+					</div>
+				</div>
 
-        <section id="summary">
-            <div class="container-fluid work-summary">
-                <div class="row">
-                    <div class="col-12 col-sm-10 col-md-6 mx-auto text-center text-block">
-                       <p>Here are some projects utilising my skills in design and development that I worked on for freelance clients, during hackathons and out of personal interest.</p>
-                   </div>
-               </div>
+				<div class="row">
+					<div class="col-12 text-center hero">
+						<img src="img/project-showcase-mockups.png">
+					</div>
+				</div>
+			</div>
+		</section>
 
-               <div class="row">
-                   <div class="col-12 col-sm-10 col-md-6 col-lg-5 mx-auto wow fadeIn">
-                      <img class="img-fluid" src="img/equity-consulting-group.jpg">
-                  </div>
-                  <div class="col-12 col-sm-10 col-md-5 mx-auto align-self-center text-block">
-                    <p><h2>Equity Consulting Group</h2>
-                    Website for Equity Consulting Group designed and implemented using Bootstrap 4, Sass and Gulp.js, and Photoshop for editing photos.</p>
-                    <p class="text-center"><a class="prototype-link" href="http://equityconsultinggroup.net" target="_blank">View Project</a></p>
-                </div>
-            </div>
+		<section id="summary">
+			<div class="container-fluid work-summary">
+				<div class="row">
+					<div class="col-12 col-md-10 mx-auto intro-block">
+						<div class="inner">
+							<h2>Overview</h2>
+							<p>Here are some smaller projects utilising my skills in design and development that I've worked on for freelance clients, school projects or simply out of interest.</p>
+						</div>
+					</div>
+				</div>
 
-            <div class="row greybg">
-            	<div class="col-12 col-sm-10 col-md-8 col-lg-6 mx-auto wow fadeIn">
-            		<img class="img-fluid" src="img/new-york-travel-guide-1.jpg">
-            	</div>
-                <div class="col-12 col-sm-10 col-md-8 col-lg-6 mx-auto wow fadeIn">
-                    <img class="img-fluid" src="img/new-york-travel-guide-2.jpg">
-                </div>
-                <div class="col-12 col-sm-10 col-md-8 mx-auto text-left text-block">
-                  <p><h2>New York Travel Guide</h2>
-                  Armed with a camera full of photos after returning from a summer break in New York, I was thinking of ways to immortalise my memories of the city. I conceptualised a travel guide mobile app that may come in handy if I ever find myself returning.</p>
-              </div>
-          </div>
+				<div class="row">
+					<div class="col-md-1"></div>
+					<div class="col-12 col-sm-10 col-md-5 mx-auto wow fadeIn align-self-center">
+						<img class="img-fluid" src="img/random-blends-mockup.png">
+					</div>
+					<div class="col-12 col-sm-10 col-md-5 mx-auto align-self-center">
+						<p><h2>Random Blends 2018</h2></p>
+						<p>Random Blends is an annual exhibition organised by the NUS Department of Communications and New Media (CNM). I was the web designer of the team responsible for crafting the digital identity of the exhibition. Combining our graphic design assets, I created a brand style guide that uses fluid shapes, natural motifs and friendly typography to convey playfulness, movement and environmentalism, which guided the design of the promotional website.</p>
+						<p class="text-center"><a class="prototype-link" href="http://rerandomblends.github.io" target="_blank">View Project</a></p>
+					</div>
+					<div class="col-md-1"></div>
+				</div>
 
-          <div class="row">
-           <div class="col-12 col-md-10 col-lg-6 mx-auto align-self-center wow fadeIn">
-              <img class="img-fluid" src="img/the-ridge-magazine.jpg">
-          </div>
-          <div class="col-12 col-sm-10 col-md-8 col-lg-6 mx-auto align-self-center text-block">
-            <p><h2>The Ridge Magazine</h2>
-                The Ridge Magazine is a student-run publication in National University of Singapore (NUS). As Webmaster and Creative Designer, I started a side project to redevelop the magazine website and make it more navigable and easier to use. My goals were to:
-                <ol>
-                  <li>Highlight our content using colours, rich images and white space to create an organisational structure</li>
-                  <li>Reflect our diversity by categorising content according to desk</li>
-                  <li>Ensure consistency in browsing experience across devices</li>
-              </ol>
-          This project was also my first foray into developing a responsive WordPress theme using Underscores.</p>
-          <p class="text-center"><a class="prototype-link" href="http://theridge.sg" target="_blank">View Project</a></p>
-      </div>
-  </div>
-</div>
-</section>
+				<div class="row">
+					<div class="col-md-1"></div>
+					<div class="col-12 col-sm-10 col-md-5 mx-auto wow fadeIn align-self-center">
+						<img class="img-fluid" src="img/equity-consulting-group.jpg">
+					</div>
+					<div class="col-12 col-sm-10 col-md-5 mx-auto align-self-center">
+						<p><h2>Equity Consulting Group</h2></p>
+						<p>Website for Equity Consulting Group designed and implemented using Bootstrap 4, Sass and Gulp.js, and Photoshop for editing photos.</p>
+						<p class="text-center"><a class="prototype-link" href="http://equityconsultinggroup.net" target="_blank">View Project</a></p>
+					</div>
+					<div class="col-md-1"></div>
+				</div>
 
-<section id="footer">
-    <div class="container-fluid bottom-nav">
-        <div class="row">
-            <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
-                <a class="prev-link" href="srina.html">&larr; Previous Project</a>
-                <a class="next-link" href="index.html">Home &rarr;</a>
-            </div>
-        </div>
-    </div>
+				<div class="row">
+					<div class="col-md-1"></div>
+					<div class="col-12 col-sm-10 col-md-5 mx-auto wow fadeIn align-self-center">
+						<img class="img-fluid" src="img/srina-landing-page-1.png">
+					</div>
+					<div class="col-12 col-sm-10 col-md-5 mx-auto align-self-center">
+						<p><h2>Srina</h2></p>
+						<p>Website for Srina, a company that distributes organically-grown tea from Sri Lanka based on a sustainable business model. I helped to refresh Srina's brand identity by creating digital assets from original photography, designing and developing its ecommerce website and crafting website content. The refreshed brand identity conveys the simplicity and beauty of tea through earthy and neutral tones.</p>
 
-    <div class="container-fluid footer">
-        <div class="row">
-            <div class="col-12 text-center mx-auto">
-                <a href="http://www.linkedin.com/in/geng-hao-teo-065ab0b9/" target="_blank"><i class="fa fa-linkedin left"></i></a>
-                <a href="http://instagram.com/genghaot" target="_blank"><i class="fa fa-instagram left"></i></a>
-            </div>
-        </div>
-        <div class="row copyright">
-            <div class="col-12 text-center mx-auto">
-                Copyright &copy; 2018 Teo Geng Hao
-            </div>
-        </div>
-    </div>
-</section>
-</div>
+						<p class="text-center"><a class="prototype-link" href="http://www.srina.com" target="_blank">View Project</a></p>
+					</div>
+					<div class="col-md-1"></div>
+				</div>
 
-<!-- JavaScript placed at the end of the document so the pages load faster -->
-<script src="js/jquery-3.1.1.js"></script>
-<script src="bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="js/wow.min.js"></script>
-<script src="js/main.js"></script>
+				<div class="row">
+					<div class="col-12 col-md-6 mx-auto align-self-center wow fadeIn">
+						<img class="img-fluid" src="img/the-ridge-magazine.jpg">
+					</div>
+					<div class="col-12 col-sm-10 col-md-5 mx-auto align-self-center">
+						<p><h2>The Ridge Magazine</h2></p>
+						<p>The Ridge Magazine is a student-run publication in National University of Singapore (NUS). As Webmaster and Creative Designer, I started a side project to redevelop the magazine website and make it more navigable and easier to use. My goals were to:
+							<ol>
+								<li>Highlight our content using colours, rich images and white space to create an organisational structure</li>
+								<li>Reflect our diversity by categorising content according to desk</li>
+								<li>Ensure consistency in browsing experience across devices</li>
+							</ol>
+						This project was also my first foray into developing a responsive WordPress theme using Underscores.</p>
+						<p class="text-center"><a class="prototype-link" href="http://theridge.sg" target="_blank">View Project</a></p>
+					</div>
+					<div class="col-md-1"></div>
+				</div>
+			</div>
+		</section>
+
+		<section id="footer">
+			<div class="container-fluid bottom-nav">
+				<div class="row">
+					<div class="col-12 col-md-10 mx-auto">
+						<a class="prev-link" href="oneservice.html">&larr; Previous Project</a>
+						<a class="next-link" href="index.html">Home &rarr;</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="container-fluid footer">
+				<div class="row">
+					<div class="col-12 text-center mx-auto">
+						<a href="http://www.linkedin.com/in/geng-hao-teo-065ab0b9/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+						<a href="http://instagram.com/genghaot" target="_blank"><i class="fab fa-instagram"></i></a>
+					</div>
+				</div>
+				<div class="row copyright">
+					<div class="col-12 text-center mx-auto">
+						Copyright &copy; 2018 Teo Geng Hao
+					</div>
+				</div>
+			</div>
+		</section>
+	</div>
+
+	<!-- JavaScript placed at the end of the document so the pages load faster -->
+	<script src="js/jquery-3.1.1.js"></script>
+	<script src="bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="js/wow.min.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
