--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                 <div class="col-12 col-sm-10 col-md-8 col-lg-6 mx-auto text-block">
                   <p>I'm Geng Hao, a designer and student at the National University of Singapore. I enjoy crafting thoughtful and elegant digital experiences and products. I've had the privilege of working with various types of companies across a range of industries, and I'm currently looking out for opportunities in user research and interaction design.</p>
                   <p>When I'm not working, I'm probably buried in a book, dabbling in film photography, running like I haven't already done enough cardio, or going on a hike somewhere. But I'm never not listening to music. I'm currently reading <em>Black Skin, White Masks</em> by Frantz Fanon, and feel free to check out some of my <a href="https://open.spotify.com/user/21iom6mfblrojwmzynzukmdpi/playlist/56Z059rWfOGefmgcBiP4ia?si=AJCoDvG5QPa1XZkN4MVZhA" target="_blank">favourite songs</a> too!</p>
-                  <p>You connect with me on <a href="http://www.linkedin.com/in/geng-hao-teo-065ab0b9/" target="_blank">LinkedIn</a>, or reach out at <strong>teogenghao@gmail.com</strong> for a copy of my resume or even just to chat. Thanks for stopping by!</p>
+                  <p>You can connect with me on <a href="http://www.linkedin.com/in/geng-hao-teo-065ab0b9/" target="_blank">LinkedIn</a>, or reach out at <strong>teogenghao@gmail.com</strong> for a copy of my resume or just to chat. Thanks for stopping by!</p>
                 </div>
               </div>
         </section>
