--- a/sayabc.html
+++ b/sayabc.html
@@ -131,7 +131,7 @@
                 <div class="col-12 col-md-10 mx-auto card-block">
                     <div class="inner">
                         <h3>Designing a seamless application process</h3>
-                        <p>The other goal of the website was to <strong>convert and ease applicants into the recruitment process</strong>. I worked closely with Ariel, the UX design lead on my team to create wireframes and hi-fi mockups of the recruitment flow, taking into account the operational requirements we established with the project managers and teacher management team.</p>
+                        <p>The other goal of the website was to <strong>convert and ease applicants into the recruitment process</strong>. Together with the UX design lead on my team, we created wireframes and hi-fi mockups of the recruitment flow, taking into account the operational requirements we established with the project managers and teacher management team.</p>
                         <p><img class="img-fluid" src="img/sayabc-recruitment-application-flow.jpg"></p>
                         <p>The recruitment flow had to guide applicants seamlessly along the process and instil confidence in their application. Filling out the application form can be stressful, so we broke it into sections which can be jumped to easily via a progress indicator. Changes are automatically saved to provide assurance to applicants that once logged in, their information will not be lost if they had to leave halfway through.</p>
                         <p><img class="img-fluid" src="img/sayabc-recruitment-scheduling.jpg"></p>
@@ -147,23 +147,62 @@
 
                 <div class="col-12 col-md-10 mx-auto card-block">
                     <div class="inner">
-                        <h3>Supporting teachers to do their best work</h3>
-                        <p>Ariel and I noticed that we could do more to help teachers get the most out of the platform, as addressing their needs improves the classroom experience for students too. We started a side project to improve our current platform for teachers. We set up Skype interviews with a group of teachers and they shared their personal goals and pain points on working with us.</p>
+                        <h3>Supporting teachers in doing their work</h3>
+                        <p>We noticed that we could do more to help teachers get the most out of the platform, as addressing their needs improves the classroom experience for students too. We started a side project to improve our current platform for teachers. We set up Skype interviews with a group of teachers and they shared their personal goals and pain points on working with us. We learned that:
+                            <ol>
+                                <li>There is a <strong>lack of transparency around when and how much they are paid</strong>, even as they expect a steady income for their work on the platform.</li>
+                                <li>The teachers feel they <strong>don't have a central platform</strong> that gives them an overview of their progress and helps them manage their classes, schedule and students effectively.</li>
+                                <li>Because their job is remote, the teachers require a <strong>constant line of communication with the teacher management team</strong> and would like to be know about important updates in a timely manner.</li>
+                            </ol>
+                        </p>
                         <div class="row">
                             <div class="col-12 col-md-6"><img class="img-fluid" src="img/sayabc-teacher-persona-amanda.jpg"></div>
                             <div class="col-12 col-md-6"><img class="img-fluid" src="img/sayabc-teacher-persona-david.jpg"></div>
                         </div>
-                        <p>Based on our research, I developed two personas to help scope our project.</p>
-                        <p><img class="img-fluid" src="img/sayabc-teacher-portal-wireframes.jpg"></p>
-                        <p>Then, we collaborated on <strong>Figma</strong> to brainstorm how we could develop an information architecture for the platform which scales appropriately to accommodate new features, yet integrates currently disparate features together to deliver a one-stop solution for teachers.</p>
-                        <p><img class="img-fluid" src="img/sayabc-new-teacher-portal-dashboard.jpg"></p>
-                        <p>The aim of the redesigned dashboard is to let teachers see the most important information they need to know at one glance, so they are aware of what has changed and decide if they want to dive deeper into a section.</p>
-                        <p><img class="img-fluid" src="img/sayabc-new-teacher-portal-classes.jpg"></p>
-                        <p>Classes are the main focus of the teachers. We decided to display their classes in a list view, categorising them by completed, scheduled and missed. This way, they can quickly glance through a greater number of classes and filter them efficiently through the search mechanism.</p>
+                        <p>Based on our research, I developed personas to provide further depth to what we had learned about our users by <strong>considering their specific contexts, goals and needs</strong>. For example, Amanda is a stay-at-home mother who is working full-time as an online teacher, and from our research, having access to an efficient support system is important to her. On the other hand, David is a recent graduate and teaching online mainly to earn a supplementary income to fulfill his passions. He is more focused on practical matters such as making sure he is earning enough, and that he is also able to flexibly plan his teaching schedule. Crafting personas also helped us to <strong>summarise our findings</strong> and <strong>sharpen the focus of our proposed teacher platform</strong>.</p>
+                        <p><img class="img-fluid" src="img/sayabc-journey-map.jpg"></p>
+                        <p>Using the findings from our interviews and personas as a guide, we started working on the first iteration of the teacher platform by scoping our project and <strong>focusing on the features that we thought would be most useful to our users based on what we knew about them</strong>. In order to better understand and empathise with our users, I created a journey map to clearly <strong>visualise the touchpoints in their experience, identify potential points of frustration based on their goals and needs, and outline ideas that may solve these problems</strong>.</p>
                         <div class="row">
-                            <div class="col-12 col-md-10 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-portal-income.jpg"></div>
+                            <div class="col-12 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-wireframe-flow.jpg"></div>
+                        </div>
+                        <p>Once I had a clear vision of the features that would deliver the most value to our users, I moved to Sketch to produce <strong>low fidelity wireframes</strong> of the platform, where it was easier to iterate quickly and visualise the information hierarchy of each page.</p>
+                        <p>After a few iterations, we applied visual treatment to the wireframes based on an <strong>internal style guide</strong> that we developed for the teacher-facing sections of our product, so that we could beta-test the new features incrementally with the teachers to get their feedback.</p>
+                        <h4>Dashboard</h4>
+                        <div class="row">
+                            <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-dashboard.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
+                            <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-notifications.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
+                        </div>
+                        <p>The aim of the redesigned dashboard is to let teachers see the most important information they need to know at one glance, so they are aware of what has changed and decide if they want to dive deeper into a section.</p>
+                        <h4>Classes</h4>
+                        <div class="row">
+                            <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-classes-1.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
+                            <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-classes-2.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-classes-3.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
+                            <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-classes-3.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
+                        </div>
+                        <p>Classes are the main focus of the teachers. We decided to display their classes in a list view, categorising them by completed, scheduled and missed. This way, they can quickly glance through a greater number of classes and filter them efficiently through the search mechanism.</p>
+                        <h4>Schedule</h4>
+                        <div class="row">
+                            <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-schedule-1.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
+                            <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-schedule-2.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
+                        </div>
+                        <h4>Income</h4>
+                        <div class="row">
+                            <div class="col-12 col-md-8 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-income.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
                         </div>
                         <p>The income page provides transparency to the teachers on how much they are earning with the platform. It aims to give them an overview of the progress they are making, and assure them that their work is being taken into account.</p>
+                        <h4>Tasks &amp; Profile</h4>
+                        <div class="row">
+                            <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-tasks.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
+                            <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-profile.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
+                        </div>
+                        <h4>Chat</h4>
+                        <div class="row">
+                            <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-chat-loading.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
+                            <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-chat.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
+                        </div>
                     </div>
                 </div>
             </div>
