--- a/sayabc.html
+++ b/sayabc.html
@@ -180,7 +180,6 @@
                         </div>
                         <div class="row">
                             <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-classes-3.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
-                            <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-classes-3.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
                         </div>
                         <p>Classes are the main focus of the teachers. We decided to display their classes in a list view, categorising them by completed, scheduled and missed. This way, they can quickly glance through a greater number of classes and filter them efficiently through the search mechanism.</p>
                         <h4>Schedule</h4>
@@ -188,9 +187,10 @@
                             <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-schedule-1.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
                             <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-schedule-2.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
                         </div>
+                        <p>On the schedule page, teachers can indicate the slots that they are available to teach, review their successfully booked slots, or apply for additional ones if they would like to clock more teaching hours. The schedule also enables teachers and the teacher management team to work together to ensure that all classes have a teacher at any one time, through a confirmation mechanism that keeps teachers accountable for the slots that they have registered. Teachers can also toggle between yearly, monthly and weekly views to better plan their personal schedules around their teaching.</p>
                         <h4>Income</h4>
                         <div class="row">
-                            <div class="col-12 col-md-8 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-income.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
+                            <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-income.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
                         </div>
                         <p>The income page provides transparency to the teachers on how much they are earning with the platform. It aims to give them an overview of the progress they are making, and assure them that their work is being taken into account.</p>
                         <h4>Tasks &amp; Profile</h4>
@@ -198,6 +198,8 @@
                             <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-tasks.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
                             <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-profile.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
                         </div>
+                        <p>The tasks &amp; notifications page aggregates the important actions and updates that teachers should be aware of in a single location, so that they can get themselves up to speed easily. Time-sensitive tasks such as giving feedback to their students after their class has ended will be automatically added to the teacher's list of tasks, ensuring that they remember to act on them.</p>
+                        <p>The profile page enables teachers to update their personal particulars and professional credentials easily, so that they can communicate their credibility as a teacher to the teaching management team and be considered for additional opportunities with the platform.
                         <h4>Chat</h4>
                         <div class="row">
                             <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-chat-loading.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
