--- a/sayabc.html
+++ b/sayabc.html
@@ -198,13 +198,14 @@
                             <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-tasks.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
                             <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-profile.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
                         </div>
-                        <p>The tasks &amp; notifications page aggregates the important actions and updates that teachers should be aware of in a single location, so that they can get themselves up to speed easily. Time-sensitive tasks such as giving feedback to their students after their class has ended will be automatically added to the teacher's list of tasks, ensuring that they remember to act on them.</p>
+                        <p>The tasks &amp; notifications page aggregates the important actions and updates that teachers should be aware of in a single location, so that they can get themselves up to speed easily. Time-sensitive tasks such as giving feedback to their students after their class has ended will be automatically added to the teacher's list of tasks, ensuring that they remember to act on them. Also, teachers can be updated about company-wide announcements or activities involving other teachers in their area or city by browsing their notifications, which helps to keep them connected to the wider teacher community.</p>
                         <p>The profile page enables teachers to update their personal particulars and professional credentials easily, so that they can communicate their credibility as a teacher to the teaching management team and be considered for additional opportunities with the platform.
                         <h4>Chat</h4>
                         <div class="row">
                             <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-chat-loading.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
                             <div class="col-12 col-md-6 mx-auto"><img class="img-fluid" src="img/sayabc-new-teacher-platform-chat.jpg" style="box-shadow: 0 2px 4px rgba(0, 0, 0, .24); margin: 4px;"></div>
                         </div>
+                        <p>We learned from our interviews that because many teachers on our platform work remotely from around the world, having a direct line of communication to the teacher management team is  important to them. Implementing a chat feature for teachers to connect to company staff efficiently also ensures that their issues or concerns can be addressed in a timely manner, especially with regards to problems that occur during lesson time or when the teacher has to seek a replacement for a class.</p>
                     </div>
                 </div>
             </div>
