--- a/index.html
+++ b/index.html
@@ -49,14 +49,13 @@
 			<div class="container-fluid work">
 				<div class="row works">
 					<div class="col-12 col-sm-6 col-md-6 col-lg-4 project-container">
-						<a>
+						<a href="sephora.html">
 							<div class="project">
 								<div class="labels">
 									<div class="label">UX Design</div>
 								</div>
 								<div class="thumbnail" style="background-image: url('img/sephora-banner.png');"></div>
 								<div class="description">
-									<i class="fas fa-lock"></i>
 									<h4>Sephora</h4>
 									<p>Engaging customers of the well-loved brand</p>
 								</div>
