--- a/accenture.html
+++ b/accenture.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109095037-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-109095037-1');
+    </script>
     <title>Geng Hao T. | Accenture Challenge</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -230,5 +239,6 @@
 <script src="bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/main.js"></script>
+
 </body>
 </html>
